[tool.poetry]
name = "rincewrite"
version = "0.1.0"
description = "Wizardly writing assistant"
license = "Apache 2.0"
authors = ["Pierre Guirriec <pierre.guirriec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
reflex = "^0.6.0"
langgraph = "^0.2.0"
langgraph-checkpoint-sqlite = "^2.0.0"
aiosqlite = "^0.20.0"
langchain-openai = "^0.1.14"
langchainhub = "^0.1.20"
langchain-community = "^0.2.7"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pillow = {version = "^10.4.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
